# emuhub

./: .gitignore
.github/workflows/: build.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: systems.json
android/app/src/main/cpp/: CMakeLists.txt  libretro_bridge.cpp
android/app/src/main/java/com/emuhub/app/: EmuHubApplication.kt  EmulatorActivity.kt  MainActivity.kt
android/app/src/main/java/com/emuhub/app/data/catalog/: CatalogModels.kt  SystemCatalog.kt
android/app/src/main/java/com/emuhub/app/data/db/: EmuHubDatabase.kt  GameDao.kt  GameEntity.kt
android/app/src/main/java/com/emuhub/app/data/r2/: R2CacheManager.kt  R2Client.kt  R2Config.kt  R2Downloader.kt  R2GameFetcher.kt
android/app/src/main/java/com/emuhub/app/data/repo/: GameRepository.kt  SettingsRepository.kt
android/app/src/main/java/com/emuhub/app/data/scanner/: RomScanner.kt
android/app/src/main/java/com/emuhub/app/di/: AppContainer.kt
android/app/src/main/java/com/emuhub/app/domain/: AutoUpdater.kt  EmulatorInstaller.kt  EmulatorRegistry.kt  GameLauncher.kt  NativeLibUtil.kt
android/app/src/main/java/com/emuhub/app/util/: EmuHubLogger.kt  GrafanaLogger.kt  StorageUtils.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/app/src/test/java/com/emuhub/app/: RomScannerTest.kt  SystemCatalogTest.kt
android/gradle/: libs.versions.toml
(+10 files in other folders)
